# rag-platform

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PROJE-PLANI.md  README.md  README.tr.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  quality.yml
docs/superpowers/specs/: 2026-07-19-g2-embedding-reranker-comparison-design.md
eval/corpus/: tr-wikipedia.json
eval/golden/: README.md  golden_tr_v1.jsonl  golden_v1.jsonl  golden_v2.jsonl
eval/results/: 20260706-165731_fake-1024.json  20260706-165825_fake-1024.json  20260706-171723_BAAI-bge-m3.json  20260719-171821_g2_matrix.json  20260720-010832_fake-1024.json  20260720-011104_fake-1024.json  20260720-011106_fake-1024.json  20260720-011118_fake-1024.json  20260720-011119_fake-1024.json  20260720-011121_fake-1024.json  20260720-011141_fake-1024.json  20260720-111235_g2_matrix.json  chunking-matrix.json  g2-report.md  scale-report.md  scale-test-100000.json  scale-test-20000.json  scale-test-200000.json  scale-test-30000.json  scale-test-5000.json
examples/docs/: permissions.json
examples/docs/eng/: deployment.md
examples/docs/handbook/: compensation.md  onboarding.md
infra/db/init/: 00-openfga-db.sql  01-schema.sql
infra/openfga/: model.fga  model.json
scripts/: acl_leak_test.py  acl_matrix_test.py  dev_query.py  fetch_corpus.py  g2_report.py  ingest_folder.py  run_chunking_matrix.py  run_eval.py  run_g2_matrix.py  scale_test.py  seed_synthetic.py  smoke_api.py  synthetic_corpus.py  token_efficiency.py
src/ragplatform/: __init__.py  config.py  db.py  hardware.py
src/ragplatform/acl/: access.py  bootstrap.py  fga.py
src/ragplatform/api/: main.py
src/ragplatform/embeddings/: __init__.py  base.py  fake.py  local_st.py  openai_compat.py
src/ragplatform/generation/: __init__.py  base.py  echo.py  local_hf.py  openai_compat.py  prompt.py  service.py
src/ragplatform/ingestion/: chunking.py  corpus.py  folder_source.py  indexer.py
src/ragplatform/retrieval/: hybrid.py  rerank.py  service.py
tests/: test_chunking.py  test_embedding_interface.py  test_fake_embeddings.py  test_folder_source.py  test_generation.py  test_openai_compat.py  test_reranker.py  test_synthetic_expectations.py
