[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ragplatform"
version = "0.1.0"
description = "Kurumsal RAG platformu — Faz 0: ACL-filtered hybrid retrieval PoC"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]
# G-2 yerel model denemeleri (CPU); üretimde embedding vLLM'den servis edilir
local = [
    "sentence-transformers>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# scripts kurulu paket değil, `python scripts/x.py` ile çalışır; yerel
# synthetic_corpus importu için sys.path ayarı importlardan önce gelmek zorunda
# (E402 kaçınılmaz ve kasıtlı).
"scripts/*.py" = ["E402"]
