[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ragplatform"
version = "0.1.0"
description = "ACL-native enterprise RAG: OpenFGA-filtered hybrid retrieval with citations (Turkish-first)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Enis Furkan Kırmızı" }]
keywords = ["rag", "retrieval", "openfga", "pgvector", "acl", "turkish", "hybrid-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Turkish",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]
# Yerel embedding/reranker (GPU varsa otomatik kullanılır); üretimde vLLM havuzu
local = [
    "sentence-transformers>=3.0",
    "transformers>=4.51",  # token_efficiency.py doğrudan tokenizer kullanır
]

# PDF/DOCX/HTML ayrıştırma (bring-your-own-docs). Ağır: layout modelleri iner.
docs = [
    "docling>=2.0",
]

[project.urls]
Homepage = "https://github.com/efkirmizi/rag-platform"
Repository = "https://github.com/efkirmizi/rag-platform"
Issues = "https://github.com/efkirmizi/rag-platform/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# scripts kurulu paket değil, `python scripts/x.py` ile çalışır; yerel
# synthetic_corpus importu için sys.path ayarı importlardan önce gelmek zorunda
# (E402 kaçınılmaz ve kasıtlı).
"scripts/*.py" = ["E402"]
