[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ragplatform"
version = "0.1.0"
description = "ACL-native enterprise RAG: OpenFGA-filtered hybrid retrieval with citations (Turkish-first)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Enis Furkan Kırmızı" }]
keywords = ["rag", "retrieval", "openfga", "pgvector", "acl", "turkish", "hybrid-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Turkish",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]
# Yerel embedding/reranker (GPU varsa otomatik kullanılır); üretimde vLLM havuzu
local = [
    "sentence-transformers>=3.0",
    "transformers>=4.51",  # token_efficiency.py doğrudan tokenizer kullanır
]

# PDF/DOCX/HTML ayrıştırma (bring-your-own-docs). Ağır: layout modelleri iner.
#
# ⚠️ GPU UYARISI: docling bağımlılıklarıyla birlikte torch'un **CPU** yapısını
# kurabilir ve daha önce kurulmuş CUDA yapısını değiştirebilir (gözlendi:
# 2.12.1+cu130 → 2.13.0+cpu). Bu sessizce olur; embedding/reranker CPU'ya düşer.
# `.[docs]` kurduktan sonra kontrol edin:
#     python -c "import torch; print(torch.__version__, torch.cuda.is_available())"
# CPU'ya düştüyse CUDA yapısını geri kurun:
#     pip install --index-url https://download.pytorch.org/whl/cu130 torch==<sürüm>+cu130
# (local_st/reranker seçtiği device'ı stderr'e loglar — çıktıda `device=cpu`
#  görüyorsanız sebebi budur.)
docs = [
    "docling>=2.0",
]

[project.urls]
Homepage = "https://github.com/efkirmizi/rag-platform"
Repository = "https://github.com/efkirmizi/rag-platform"
Issues = "https://github.com/efkirmizi/rag-platform/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# scripts kurulu paket değil, `python scripts/x.py` ile çalışır; yerel
# synthetic_corpus importu için sys.path ayarı importlardan önce gelmek zorunda
# (E402 kaçınılmaz ve kasıtlı).
"scripts/*.py" = ["E402"]
